infra/deployment-notifier.yaml
# kubectl --namespace cexpay-infra get --output=yaml Deployment/notifier
# kubectl --namespace cexpay-infra apply --filename=infra/deployment-notifier.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: notifier
  name: notifier
  namespace: cexpay-infra
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: notifier
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
      - env:
        - name: endpoint.subscriber.bindPath
          value: /subscriber
        image: docker.registry.zxteam.net/pub/notifier/service:master.6d36f8ce
        imagePullPolicy: IfNotPresent
        name: notifier
        ports:
        - containerPort: 8080
          name: 80tcp802
          protocol: TCP
        resources: {}
        stdin: true
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
