infra/service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: cexiopay-infra
spec:
  ports:
  - name: pg
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  sessionAffinity: None
  type: ClusterIP
