infra/service-rabbitmq.yaml
# kubectl --namespace cexiopay-infra get --output=yaml Service/rabbitmq
# kubectl --namespace cexiopay-infra apply --filename=infra/service-rabbitmq.yaml

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: cexiopay-infra
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9090"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    protocol: TCP
    targetPort: 5672
  - name: management
    port: 15672
    protocol: TCP
    targetPort: 15672
