infra/service-temporary-nuget.yaml
# kubectl --namespace cexpay-infra get --output=yaml Service/temporary-nuget
# kubectl --namespace cexpay-infra apply --filename=infra/service-temporary-nuget.yaml

apiVersion: v1
kind: Service
metadata:
  name: temporary-nuget
  namespace: cexpay-infra
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: temporary-nuget
  ports:
  - name: nuget-nginx
    port: 8080
    protocol: TCP
    targetPort: 8080
